# ai-debate

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  check_llm.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
app/: __init__.py  cli.py  main.py
app/api/: __init__.py  routes.py  websocket.py
app/core/: __init__.py  agent_registry.py  debate_engine.py  events.py  prompts.py  state.py  storage.py  tool_modes.py  validators.py
app/mcp/: __init__.py  debate_server.py  schemas.py
app/models/: __init__.py  agent.py  artifacts.py  debate.py  mcp.py
fixtures/protocol/: theses.json
frontend-nuxt/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  nuxt.config.ts  package.json  pnpm-lock.yaml
frontend-nuxt/app/: app.config.ts  app.vue  error.vue
frontend-nuxt/app/components/: BrandIdentity.vue  BrandLockup.vue  Logo.vue  ModalConfirm.vue  ModalRename.vue  Navbar.vue  PublicNavbar.vue
frontend-nuxt/app/composables/: useActiveDebateState.ts  useChatActions.ts  useChats.ts  useCsrf.ts  useDebateAgents.ts  (+4 more)
frontend-nuxt/scripts/: calibrate-brand-colors.mjs
llms/: __init__.py  base.py  claude.py  codex.py  gemini.py
scripts/: check.sh  install.sh  launch-adb.sh  launch-api.sh  package-release.sh
tests/: conftest.py
tests/backend/: fakes.py  test_api_discussions.py  test_api_llm_providers.py  test_debate_engine_fake_agents.py  test_llm_tool_modes.py  test_storage_state.py  test_tool_modes.py
tests/mcp/: test_debate_server.py
tests/protocol/: test_prompts.py  test_validators.py
(+32 files in other folders)
